Fixed display alignment of SD mode in Full Screen

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -148,7 +148,7 @@ a {
     top: 0;
     left: 0;
     right: 0;
-    margin: 0;
+    margin: auto;
 }
 
 #stats{
